[gd_scene load_steps=2 format=2]

[ext_resource path="res://Sound Engine/SoundEngineController.gd" type="Script" id=1]

[node name="SoundEngine" type="Node"]
script = ExtResource( 1 )

[node name="SfxEnemy" type="AudioStreamPlayer" parent="."]

[node name="SfxPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -4.0

[node name="SfxPlayerWeapon" type="AudioStreamPlayer" parent="."]

[node name="SfxEnemyWeapon" type="AudioStreamPlayer" parent="."]

[node name="SfxCivilian" type="AudioStreamPlayer" parent="."]

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="SfxUI" type="AudioStreamPlayer" parent="."]
